# CMS32FOC_GCC

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  testhpp.sh
Docs/: 00-文档索引.md  02-工具链-VSCode任务.md  Toolchain-Setup-zh.md  VSCode-Tasks.md
Docs/Architecture/: 01-当前程序-构建与阅读地图.md  02-当前程序-理论与参数指南.md  09-Cpp迁移-现代Cpp采用指南.md  10-Cpp迁移-路线图.md  11-Cpp迁移-分阶段实践指南.md  12-Cpp迁移-Support层动手指南.md  13-Cpp迁移-MotorControl核心调度层动手指南.md  14-Cpp迁移-MotorControl当前状态教学.md  15-Cpp迁移-MotorControl数学小组件动手指南.md  16-Cpp迁移-FOC坐标变换动手指南.md  17-Cpp迁移-编码器与速度估算动手指南.md  18-Cpp迁移-串口通信动手指南.md  19-Cpp迁移-Board薄封装动手指南.md  ActiveControlChain.md  BringupHandoff.md  ControlLayerPolicy.md  CppRefactorRoadmap.md  CppStageImplementationGuide.md  CurrentLoopBringupNotes.md  CurrentLoopPIDesign.md  CurrentProgramBuildAndReadMap.md  CurrentProgramTheoryAndParameterGuide.md  CurrentSamplingPlan.md  CxxMotorAndBoot.md  MigrationPlan.md  ModernCppAdoptionGuide.md  MotorControlCoreCppHandsOnGuide.md  ProjectStructure.md  ReadingGuide.md  RuntimeControlFlow.md  StartupAndLinker.md  SupportCppHandsOnGuide.md
Docs/CMake/: 21-CMake基础到本工程动手指南.md
Docs/CppMigration/: 09-Cpp迁移-现代Cpp采用指南.md  10-Cpp迁移-路线图.md  11-Cpp迁移-分阶段实践指南.md  12-Cpp迁移-Support层动手指南.md  13-Cpp迁移-MotorControl核心调度层动手指南.md  14-Cpp迁移-MotorControl当前状态教学.md  15-Cpp迁移-MotorControl数学小组件动手指南.md  16-Cpp迁移-FOC坐标变换动手指南.md  17-Cpp迁移-编码器与速度估算动手指南.md  18-Cpp迁移-串口通信动手指南.md  19-Cpp迁移-Board薄封装动手指南.md  20-Cpp分层与嵌入式规范审查.md  22-Cpp迁移-define边界收缩动手指南.md  23-Cpp迁移-ScrewAxis产品化与位置环动手指南.md  24-Cpp迁移-量产安全与验证动手指南.md  25-Cpp迁移-C_Cpp混编最小封装落地指南.md
Docs/CurrentProgram/: 01-当前程序-构建与阅读地图.md  02-当前程序-理论与参数指南.md  03-位置环-正弦阶跃扫频测试.md
Docs/FocTheory/: 03-FOC理论链路与当前工程数据.md  04-电流采样与电角度理论.md  05-从Watch数据定位FOC问题.md  06-PMSM电机模型与电压余量.md  07-环路带宽与离散PI稳定性.md  08-编码器零位校准与相序判断.md  08B-FOC参数辨识与实验记录.md  08C-逆变器非理想与电流采样误差.md  08D-保护逻辑与安全状态理论.md  08E-机械负载堵转与回零理论.md  08F-速度估算与低速控制理论.md  08G-VF与IF开环理论.md  08H-高级FOC控制概念.md  08I-实验仪器与波形观察理论.md
Docs/Hardware/: 01-硬件-引脚与外设.md  Pins.md
Docs/Toolchain/: 01-工具链-工具链使用说明.md
Firmware/App/: main.c  screw_axis.c  screw_axis.cpp  screw_axis.h
Firmware/Board/Config/: BoardConfig.h  Config.h  TuneConfig.h
Firmware/Board/Inc/: board_profile.h  board_uart.h  foc_bsp.h  foc_curr.h  foc_ma600.h  foc_ma600_diag.h  foc_pwm.h
Firmware/Board/Src/: board_profile.c  board_uart.c  foc_bsp.c  foc_curr.c  foc_ma600.c  foc_ma600_diag.c  foc_pwm.c
Firmware/Drivers/CMS32M6510/: cms32m6510_flash.ld  cms32m6510_platform.c  cms32m6510_platform.h  startup_CMS32M6510_gcc.S
Firmware/Drivers/CMS32M6510/Memory/Inc/: CMS32M6510_DataFlashLayout.h  (+1 more)
Firmware/FrozenDiagnostics/: README.md
Firmware/FrozenDiagnostics/Board/: foc_ma600_aux_frozen.c
Firmware/FrozenDiagnostics/MotorControl/: motor_control_diag_frozen.c
Firmware/MotorControl/Abi/: MotorControl.h  motor_control_internal.h  motor_control_state.h  motor_control_vf.h
Firmware/MotorControl/Algorithm/: foc_math.c  foc_math.h
Firmware/MotorControl/C/: motor_control_c.c  motor_control_c.h  motor_control_current.c  motor_control_diag.c  motor_control_diag.h  motor_control_diag_frozen.c  motor_control_encoder.c  motor_control_internal.h  motor_control_output.c  motor_control_vf.c  motor_control_vf.h  motor_control_watch.c
Firmware/MotorControl/Config/: config.hpp
Firmware/MotorControl/Core/: core.cpp  current.cpp  encoder.cpp  motor_controller.hpp  output.cpp  vf.cpp
Firmware/MotorControl/Cpp/: motor_command_sanitizer.hpp  motor_control_config.hpp  motor_control_core.cpp  motor_control_types.hpp
Firmware/MotorControl/FrozenCpp/: adc_sample_window.hpp  foc_transform.hpp  pwm_values.hpp
Firmware/MotorControl/Inc/: Axis.hpp  Controller.hpp  CurrentSense.hpp  Encoder.hpp  Motor.hpp  MotorControl.h
Firmware/MotorControl/LegacyC/: motor_control_c.c  motor_control_current.c  motor_control_encoder.c  motor_control_output.c  motor_control_vf.c
Firmware/MotorControl/Math/: encoder_math.hpp  fixed_pi.hpp  speed_math.hpp
Firmware/MotorControl/Src/: Axis.cpp  Controller.cpp  CurrentSense.cpp  Encoder.cpp  Motor.cpp  MotorControl.cpp
Firmware/MotorControl/Types/: command_sanitizer.hpp  debug_state.hpp  types.hpp
Firmware/Support/: clamp.hpp  enum_utils.hpp  irq_guard.hpp  low_pass.hpp  ring_buffer.hpp  slew_limiter.hpp  static_asserts.hpp  units.hpp
Firmware/Tests/BoardWatch/: main_board_watch.c
Firmware/Tests/CppSmoke/: main_cpp_smoke.cpp
Firmware/Tests/StartupSmoke/: main_startup_smoke.c
Firmware/Tests/UartPrintfGcc/: main_uart_printf_gcc.c
Reference/: README.md
Reference/CmsemiconPack/Cmsemicon.CMS32M65xx.0.6.4/Flash/: CMS32M6510_DataFlash.FLM
Reference/CmsemiconPack/Cmsemicon.CMS32M65xx.0.6.4/SVD/: CMS32M6510.svd
Reference/JLink/Jlink/: CMS32.jscope
Reference/LXQS_FBL2/LXQS_LQS_FBL2_CMS32M6510_H100_F306_C000_20260424/Project/: keilkilll.bat
Reference/LXQS_FBL2/LXQS_LQS_FBL2_CMS32M6510_H100_F306_C000_20260424/SEGGER_RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
Reference/LXQS_FBL2/LXQS_LQS_FBL2_CMS32M6510_H100_F306_C000_20260424/SVD/: CMS32M6510.SFR  CMS32M6510.sfd
Reference/Legacy/CMS32FOCAC6/: CMS32FOCAC6.uvoptx  CMS32FOCAC6.uvprojx  README_Keil.md
Reference/Legacy/CMS32FOCAC6/Docs/: 00 文档入口.md  01 文件地图导航.md  02 程序状态.md  03 代码结构分析.md  04 三闭环控制设计.md  05 电流采样学习记录.md  06 电机参数填写表.md  07 DQ坐标偏差诊断.md  08 控制框架路线图.md  09 文件拆分与分层规划.md  10 架构边界审查.md  11 项目组织规划.md  12 外设开发流程.md  13 外设分配与控制频率规划.md  14 PWM输出打通记录.md  15 MA600手册阅读指南.md  16 ACC参考工程指南.md  17 LXQS硬件配置参考.md  18 AC6独立工程指南.md  19 FOC早期综合方案.md  20 FOC数值关系与计算说明.md  21 SVPWM互补PWM与ADC采样点教学.md  22 开环测试与电流环前验证清单.md  99 学习与排错记录.md
Reference/Legacy/CMS32FOCAC6/SeggerRtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
Tools/: foc_teaching_sim.py
Tools/JLink/: README.md
Tools/OfflineInstallers/: wsl.2.7.10.0.x64.msi
Tools/Ozone/: README.md  cms32_board_watch_test.jdebug  cms32foc.jdebug  print_ozone_paths.sh
cmake/: arm-none-eabi-gcc.cmake  firmware_output.cmake  print_firmware_size.cmake
scripts/: docker-build.sh  docker-export.sh
(+384 files in other folders)
